fix line wrapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4923,7 +4923,7 @@ Services Two
   position: relative;
   display: block;
   margin-bottom: 50px;
-  max-width: 280px;
+  max-width: 302px;
   width: 100%;
 }
 
